--- a/src-capacitor/android/app/src/main/res/values/strings.xml
+++ b/src-capacitor/android/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='utf-8'?>
 <resources>
-    <string name="app_name">E-Commerce Platform</string>
-    <string name="title_activity_main">E-Commerce Platform</string>
+    <string name="app_name">E-Comm Shop</string>
+    <string name="title_activity_main">E-Comm Shop</string>
     <string name="package_name">org.capacitor.quasar.app</string>
     <string name="custom_url_scheme">org.capacitor.quasar.app</string>
 </resources>
